--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Material.Brown">
+        android:theme="@style/Material.Brown" >
         <activity
-            android:theme="@style/Material.Brown"
-            android:name=".MainActivity">
+            android:name=".MainActivity"
+            android:theme="@style/Material.Brown">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
